<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.csci3130_baseproject.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="240dp"
        android:layout_height="47dp"
        android:layout_marginEnd="72dp"
        android:layout_marginTop="38dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:onClick="enterMyCourses"
        android:text="@string/myClasses"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:text="My Classes" />

    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="240dp"
        android:layout_height="47dp"
        android:layout_marginEnd="72dp"
        android:layout_marginTop="38dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:onClick="displayDailySchedule"
        android:text="@string/mySchedule"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        tools:text="My Daily Schedule" />

    <Button
        android:id="@+id/button3"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="240dp"
        android:layout_height="47dp"
        android:layout_marginEnd="72dp"
        android:layout_marginTop="76dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:onClick="displayCourseMain"
        android:text="@string/timetable"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Academic Timetable" />

    <Button
        android:id="@+id/button4"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="240dp"
        android:layout_height="47dp"
        android:layout_marginEnd="72dp"
        android:layout_marginTop="105dp"
        android:backgroundTint="@android:color/holo_green_light"
        android:onClick="logout"
        android:text="@string/logout"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:text="LOGOUT" />



</android.support.constraint.ConstraintLayout>
